src/styles.css
html, body {
    margin: 0;
    background: #FFFFFF;
}
html {
    display: flex;
    justify-content: center;
}
body {
    margin: 0;
    width: 90%;
}
header {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.logo-link {
    width: fit-content;
    margin: 1em 1em 1em 0;
}
.logo {
    height: 63px;
}
nav {
    width: 100%;
}
nav ul {
    display: flex;
    justify-content: space-between;
    padding: 0;
    margin: 0;
    list-style: none;
    font-size: 1rem;
    font-family: 'Asap';
    text-transform: uppercase;
    text-decoration: none;
}
nav ul a {
    text-decoration: none;
    color: black
}
nav ul li {
    margin: 1em 0 1em 0;
    color: #7c7c7c;
    font-weight: bolder;
}
.text h1 {
    margin-top: 0.25em;
    color: black;
    font-family: 'Asap Condensed', sans-serif;
    line-height: 50px;
    font-size: 2.5rem;
}
.text p {
    font-family: 'Roboto', sans-serif;
    line-height: 20px;
}
.icons {
    margin: 1.25em 0 1em 0;
    width: 195px;
    display: flex;
    justify-content: space-between;
}
.icon {
    width: 31px;
    height: 31px;
    color: #7c7c7c;
}
.img {
    display: flex;
    justify-content: center;
    align-items: center;
}
.hka {
    margin: 1.1em;
    width: 244px;
    z-index: 2;
}
.circle {
    background-color: #BCE702;
    width: 230px;
    height: 230px;
    border-radius: 100%;
    position: absolute;
}
footer {
    font-size: 0.75rem;
    text-align: center;
    font-family: 'Asap', sans-serif;
    line-height: 15px;
}

/* Responsive */
@media (min-width: 500px) {
    body {
        width: 80%;
        height: 100vh;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    header {
        width: 80%;
        position: absolute;
        top: 1em;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }
    nav {
        width: 50%;
    }
    .logo-link {
        margin: 0;
    }
    .logo {
        height: 63px;
    }
    main {
        margin-top: -5vh;
        display: flex;
        justify-content: space-between;
    }
    .text {
        width: 50%;
    }
    .text h1 {
        font-size: 4.5rem;
        line-height: 80px;
        letter-spacing: 0.75px;
        margin-bottom: 0.5em;
    }
    .text p {
        margin-top: 0;
        line-height: 32px;
    }
    .icons {
        width: 70%;
    }
    .icon {
        width: 50px;
        height: 50px;
        transition: .3s;
    }
    .hka {
        width: 450px;
        margin-right: 0;
    }
    .circle {
        width: 350px;
        height: 350px;
        position: fixed;
        top: 280px;
        right: -80px;
    }
    .shadow {
        position: fixed;
        top: 430px;
        right: 135px;
        width: 400px;
        height: 200px;
        background-color: rgba(0, 0, 0, 0.7);
        filter: blur(50px);
        border-radius: 100%;
        z-index: 1;
    }
    footer {
        position: absolute;
        bottom: 0;
    }
    .icon:hover {
        transition: .3s;
        color: #BCE702;
        transform: translateY(-5px);
    }
}

/* Green Class for JS */
.green {
    color: #BCE702;
}

